====================
- macOS version is working again
- Improved the statistics tab to display crowd numbers in each stadium section, including percentages.
- Added HatStats statistics in Matches module
- Fixed bug related to the introduction of Support specialty
- Added support for Divine+ ratings in Match Analysis
- Added flags for Comores, Guam, Sri Lanka, Sao Tomé-et-Principe and Curaçao

Changelist HO! 1.434
====================
- Added check if database folder is writeable
- Removed market value logic (EPV)
- Added new staff structure to miscellaneous tab
- Added new staff assistant level to training tab
- Made sure staff assistant level is visible even if there are no staff at all.
- NThrf should be working again
- Added team name to title bar
- Modified training factors, including base week. Hopefully predictions are improved.

- Changes done related to Style of Play being introduced.
- Max number of orders is dependent on Tactical Assistant level.
- A warning appears if you somehow have more orders than allowed to.	
- Added download and storage of style of play to match orders.
- Caution: style of play is always 0 if you haven't set a new default lineup for the upcoming match.
- Added support in lineup details (right panel).
- A combo box near the top to select style of play. 
- The available choices depend on trainer type and Tactical Assistant level.
- A combo box near trainer choice to set a different number of tactical assistants in this panel only.
- Rating calculation uses style of play. The calculation uses a linear fit between the set values for
	offensive, neutral and defensive trainer contributions.
- Added upload of style of play to the match orders.
- Two new version of rating prediction values according to changes for the new season. Default and newB.
	Every feedback which one you think is better is appreciated.
- Added style of play support in matches and matchesanalyzer module.
