@@ -1,4 +1,4 @@
 version=1.435
 versionType=DEV
-build=6
+build=7
 released=28.11.2018
