@@ -6,3 +6,4 @@ Changelist HO! 1.435
 - Fixed bug related to the introduction of Support specialty
 - Added support for Divine+ ratings in Match Analysis
 - Added flags for Comores, Guam, Sri Lanka, Sao Tomé-et-Principe and Curaçao
+- Fixed a long time build where IFA would crash
